--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+
 body {
   margin: 0;
   padding: 0;
@@ -40,4 +41,8 @@ code {
 
 .react-grid-HeaderRow{
   overflow-x: inherit !important;
+}
+
+main > .container {
+  padding: 60px 15px 0;
 }
